# kestep

./: LICENSE  README.md  kestep.ini  pyproject.toml
epicure/: this_weeks_order.json  this_weeks_order.txt
src/kestep/: DrawCharacters.py  __init__.py  call_llm.py  cfunctions.py  kepf.py  kestep.py  kestep_api_config.py  kestep_functions.py  kestep_models.json  kestep_util.py  main.py
steps/: Anthropic.kepf  Anthropic.prompt  EpicureGenerateOrders.prompt  GenerateJson.kepf  GenerateJson.prompt  Mistral.prompt  OpenAI.prompt  TestPicture.prompt  TestWebPages.kepf  TestWebPages.prompt  Xai.prompt
test/: __init__.py  test_main.py
