# pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kestep"
version = "0.2.2"
authors = [
    { name = "Jerry Westrick", email = "jerry@westrick.com" },
]
description = "Knowledge Engineer ReDesigned"
requires-python = ">=3.8"

[project.scripts]
kestep = "kestep.main:main"


[tool.setuptools.package-data]
"kestep" = ["kestep_models.json"]
